WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119172
HTMLParserScheduler gets into an inconsistent state when suspended for reasons other than WillDeferLoading
https://bugs.webkit.org/show_bug.cgi?id=119172
Summary
HTMLParserScheduler gets into an inconsistent state when suspended for reason...
Alexey Proskuryakov
Reported
2013-07-26 18:04:32 PDT
When loading is not deferred, the following scenario is possible: - document gets suspended, suspending HTMLParserScheduler; - HTMLParserScheduler suspends its timer; - we get new data from the network; - parse it; - HTMLParserScheduler yields again, starting a timer again. We'll end up with an active timer and m_isSuspendedWithActiveTimer flag. Additionally, parsing and loading are actually supposed to continue when suspended for certain reasons. Even when DOM timers and animations are not necessary, we can try to finish loading a page.
Attachments
proposed patch
(6.71 KB, patch)
2013-07-26 18:21 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-07-26 18:21:21 PDT
Created
attachment 207572
[details]
proposed patch
WebKit Commit Bot
Comment 2
2013-07-27 17:03:55 PDT
Comment on
attachment 207572
[details]
proposed patch Clearing flags on attachment: 207572 Committed
r153407
: <
http://trac.webkit.org/changeset/153407
>
WebKit Commit Bot
Comment 3
2013-07-27 17:03:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug